--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-tinder-card-demo",
-  "homepage": "/react-tinder-card-demo/",
+  "name": "react-tinder-card-example",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
